--- a/client/package.json
+++ b/client/package.json
@@ -1,30 +1,22 @@
 {
-  "name": "client",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
-  "private": true,
-  "license": "UNLICENSED",
+  "name": "next-client",
+  "version": "16.14.0",
+  "description": "full stack app next client part",
+  "main": "index.js",
   "scripts": {
-    "dev": "next dev"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
+  "author": "mihhha",
+  "license": "ISC",
   "dependencies": {
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@types/react-redux": "^7.1.25",
-    "axios": "^1.3.4",
-    "next": "^10.0.6",
-    "next-redux-wrapper": "^8.1.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-redux": "^8.0.5",
-    "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2",
-    "sass": "^1.58.0"
-  },
-  "devDependencies": {
-    "@types/node": "^18.13.0",
-    "@types/react": "^17.0.1",
-    "typescript": "^4.9.5"
+    "-": "^0.0.1",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "next": "^13.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
